--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,7 +19,7 @@
 }
 
 .page {
-  /*display: block;*/
+  overflow-x: hidden;
   scroll-behavior: smooth;
   background-color: $c-gray;
 
@@ -47,7 +47,6 @@
   }
 
   &__main {
-    /*margin-top: 76px;*/
     padding: 20px;
 
     @media (min-width: 415px) {
