--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,15 +1,12 @@
 .menu {
   height: 100vh;
-  /*position: relative;*/
   background-color: #e5e5e5;
   z-index: 5;
   overflow-y: hidden;
 
-  /*&__content {
-    box-sizing: border-box;
-    height: 100vh;
-    padding: $header-padding 0;
-  }*/
+  @include tablet {
+    height: fit-content;
+  }
 
   &__list {
     max-width: 100vw;
@@ -19,6 +16,7 @@
     justify-content: center;
     align-items: center;
     gap: 16px;
+    padding: 0;
   }
 
   &__item {
@@ -46,7 +44,7 @@
 }
 
 .nav-container {
-  margin-top: 50px;
+  margin-top: 1.5em;
   display: flex;
   justify-content: center;
   justify-items: center;
