--- a/src/styles/blocks/announcement.scss
+++ b/src/styles/blocks/announcement.scss
@@ -10,11 +10,23 @@
   z-index: 1;
 
   @media (min-width: 768px) {
-    top: -84px;
+    top: 306px;
     width: 570px;
     height: 204px;
     padding-left: 100px;
     padding-right: 100px;
+  }
+
+  @media (min-width: 1280px) {
+    top: 448px;
+  }
+
+  @media (min-width: 1440px) {
+    top: 512px;
+  }
+
+  @media (min-width: 1920px) {
+    top: 586px;
   }
 
   &__subscriptions {
