--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -11,10 +11,14 @@
     grid-template-areas: "image image image image image image";
   }
 
-  @media (min-width: 1920px) {
-    display: grid;
-    grid-template-columns: repeat(16, 70px);
+  @media (min-width: 1280px) {
+    grid-template-columns: repeat(12, 70px);
+    grid-template-rows: auto;
     gap: 30px;
+  }
+
+  @media (min-width: 1920px) {
+    grid-template-columns: repeat(16, 70px);
   }
 
   &__image {
@@ -26,6 +30,25 @@
     @media (min-width: 768px) {
       grid-area: 1 / 1 / 2 / -1;
     }
+
+    @media (min-width: 1280px) {
+      grid-area: 1 / 1 / 2 / 8;
+    }
+
+    @media (min-width: 1920px) {
+      grid-area: 1 / 1 / 2 / 10;
+    }
+
+    &--reversed {
+      @media (min-width: 1280px) {
+        grid-area: 1 / 6 / 2 / -1;
+      }
+
+      @media (min-width: 1920px) {
+        grid-area: 1 / -10 / 2 / -1;
+        margin: auto;
+      }
+    }
   }
 
   &__container {
@@ -33,8 +56,25 @@
       grid-area: 2 / 1 / 3 / 4;
     }
 
+    @media (min-width: 1280px) {
+      grid-area: 1 / -5 / 2 / -1;
+      margin-top: 50px;
+    }
+
     @media (min-width: 1920px) {
-      grid-area: text;
+      grid-area: 1 / 11 / 2 / 15;
+      margin: auto;
+    }
+
+    &--reversed {
+      @media (min-width: 1280px) {
+        grid-area: 1 / 1 / 2 / 5;
+      }
+
+      @media (min-width: 1920px) {
+        grid-area: 1 / 3 / 2 / 7;
+        margin: auto;
+      }
     }
   }
 
