--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -4,9 +4,14 @@
   @media (min-width: 768px) {
     padding: 0 34px;
   }
+
+  @media (min-width: 1280px) {
+    padding: 0 55px;
+    max-width: 1280px;
+  }
   
   &__title {
-    margin: 90px 0 40px;
+    margin: 0 0 40px;
     text-align: center;
     font-weight: bold;
     font-size: 36px;
@@ -24,8 +29,32 @@
   }
 
   &__middle {
+    box-sizing: unset;
+    width: 100%;
+
     @media (max-width: 767px) {
+      height: 210px;
       padding-bottom: 197px;
+    }
+
+    @media (min-width: 768px) {
+      height: 390px;
+      padding-bottom: 210px;
+    }
+
+    @media (min-width: 1280px) {
+      height: 550px;
+      padding-bottom: 302px;
+    }
+
+    @media (min-width: 1440px) {
+      height: 619px;
+      padding-bottom: 297px;
+    }
+
+    @media (min-width: 1920px) {
+      height: 674px;
+      padding-bottom: 316px;
     }
   }
 
@@ -39,24 +68,19 @@
     z-index: -1;
     
     @media (min-width: 768px) {
-      margin: 0 auto;
       height: 390px;
-      position: relative;
-      grid-area: banner;
+    }
+
+    @media (min-width: 1280px) {
+      height: 550px;
+    }
+
+    @media (min-width: 1440px) {
+      height: 619px;
     }
 
     @media (min-width: 1920px) {
       height: 674px;
-    }
-
-    &_container {
-      @media (min-width: 768px) {
-        grid-template-columns: repeat(6, 100px);
-        grid-template-rows: 1fr;
-        gap: 20px;
-
-        grid-template-areas: "banner banner banner banner banner banner";
-      }
     }
   }
 }
