--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,9 +1,8 @@
-.title-container {
-  display: flex;
-}
-
-.image__title {
-  margin: 0 auto;
+.header__title {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
   margin-top: 9px;
   font-weight: bold;
   text-transform: uppercase;
@@ -13,9 +12,7 @@
 }
 
 .image-container {
-  // position: relative;
-  // top: 0;
-  // left: 0;
+  position: relative;
   width: 100%;
   height: 300px;
   background-image: url(../images/header-small.jpg);
@@ -26,6 +23,24 @@
 
   @media (min-width: 768px) {
     width: 505px;
+    height: 384px;
+    right: 0;
+    grid-area: 1 / 3 / 4;
+  }
+
+  @media (min-width: 1280px) {
+    width: 725px;
+    height: 655px;
+    grid-area: 1 / 6 / 4;
+  }
+
+  @media (min-width: 1440px) {
+    width: 805px;
+  }
+
+  @media (min-width: 1920px) {
+    width: 1245px;
+    grid-area: 1 / 6 / 4;
   }
 }
 
@@ -34,6 +49,16 @@
   top: 33px;
   left: 23px;
   height: 18px;
+}
+
+.buy-container {
+  @media (min-width: 768px) {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+
+  @media (min-width: 1280px) {
+    grid-area: 3 / 3;
+  }
 }
 
 .buy-link {
@@ -51,8 +76,14 @@
   text-transform: uppercase;
   font-weight: 500;
   font-size: 16px;
-  line-height: 100%;
   color: #0f0e08;
+
+  @media (min-width: 768px) {
+    left: 0;
+    width: 150px;
+    height: 70px;
+    margin: 0;
+  }
 
   &::before {
     position: absolute;
@@ -65,6 +96,12 @@
     left: 100%;
     top: -1px;
     background-color: #1a5a4c;
+
+    @media (min-width: 768px) {
+      width: 70px;
+      height: 70px;
+      line-height: 400%;
+    }
   }
 }
 
@@ -74,4 +111,8 @@
 
 .tickets {
   line-height: 300%;
+
+  @media (min-width: 768px) {
+    line-height: 400%;
+  }
 }
