--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -6,9 +6,13 @@
   background-image: url("../images/Vector.svg");
   background-position: center;
   background-repeat: no-repeat;
+  transition: background-color 0.5s;
 
   @media (max-width: 760px) {
     width: 50px;
     height: 50px;
+  }
+  &:hover {
+    background-color: #f14a27;
   }
 }
