--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -24,10 +24,12 @@
 
     @media (min-width: 760px) {
       display: flex;
+      justify-content: space-between;
     }
 
-    @media (min-width: 760px) {
+    @media (min-width: 1279px) {
       justify-content: space-between;
+      width: 50%;
     }
   }
 
