--- a/src/styles/blocks/capital.scss
+++ b/src/styles/blocks/capital.scss
@@ -69,12 +69,13 @@
     font-weight: 500;
     font-size: 16px;
     border: 1px solid $c-textDate;
-    transition: border-radius 0.3s, padding-right 0.3s;
+    transition: border-radius 0.3s, background-color 0.5s;
     color: $c-darkText;
 
-    //&:hover {
-    //  box-shadow: $shadow-field;
-    //}
+    &:hover {
+      background-color: $c-textDate;
+      color: white;
+    }
 
     @media (max-width: 760px) {
       width: 280px;
@@ -130,6 +131,26 @@
 
     @media (max-width: 426px) {
       margin: 9px 0 0;
+    }
+  }
+
+  &__toggler {
+    position: absolute;
+    top: 45px;
+    left: 139px;
+    cursor: pointer;
+    z-index: 2;
+    @media (max-width: 1279px) {
+      left: 58px;
+    }
+
+    @media (max-width: 760px) {
+      left: 37px;
+    }
+
+    @media (max-width: 426px) {
+      left: 23px;
+      top: 33px;
     }
   }
 }
