--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,8 +3,10 @@
 @import "typography";
 @import "_reset";
 @import "_normalize";
+@import "blocks/page";
 @import "blocks/button";
 @import "blocks/logo";
+@import "blocks/nav";
 @import "blocks/capital";
 @import "blocks/container";
 @import "blocks/events";
