--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$color-green: #1a5a4c;
+$color-title-section: #0f0e08;
+$header-text-color: #000;
+$text-color: #4e4e4e;
+$exhibinition-name:#687480;
