--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,14 @@
 .header {
   height: 100vh;
+
+  &__bg {
+    width: 100%;
+    min-height: 300px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("../images/museum.jpg");
+  }
   &__title {
     @extend %h1;
   }
@@ -17,6 +26,7 @@
   grid-template-columns: var(--width-icon) 1fr;
   justify-items: center;
   align-items: center;
+  z-index: 1;
 }
 
 .icon {
