--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -9,11 +9,19 @@
     margin: 0 auto;
   }
 
-  &__bg {
-    height: 300px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-image: url("../images/museum.jpg");
+  &__section {
+    &-title {
+      @extend %h2;
+      text-align: center;
+      margin-bottom: 40px;
+
+      @include onTablet {
+        margin-bottom: 50px;
+      }
+
+      @include onDesktop {
+        margin-bottom: 60px;
+      }
+    }
   }
 }
