--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,7 @@
 @import "typography";
 
 @import "./blocks/page";
+@import "./blocks/grid";
 @import "./blocks/container";
 @import "./blocks/header";
+@import "./blocks/events";
