Footer was done

--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -7,13 +7,20 @@
     gap: 30px;
   }
 
-  // &--desktop {
-  //   display: block;
+  &--footer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 15px;
 
-  //   @include laptop {
-  //     display: grid;
-  //   }
-  // }
+    @include tablet {
+      grid-template-columns: repeat(6, 1fr);
+    }
+
+    @include laptop {
+      grid-template-columns: repeat(12, 1fr);
+      column-gap: 30px;
+    }
+  }
 
   &__item {
     &--row {
@@ -22,6 +29,18 @@
 
     @for $start from 1 through 12 {
       @for $end from $start through 12 {
+        @media (max-width: 768px) {
+          &--phone-#{$start}-#{$end} {
+            grid-column: #{$start} / #{$end + 1};
+          }
+        }
+
+        @include tablet {
+          &--tablet-#{$start}-#{$end} {
+            grid-column: #{$start} / #{$end + 1};
+          }
+        }
+
         @include laptop {
           &--#{$start}-#{$end} {
             grid-column: #{$start} / #{$end + 1};
