--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,4 +5,5 @@
 @import "./blocks/grid";
 @import "./blocks/container";
 @import "./blocks/header";
+@import "./blocks/button";
 @import "./blocks/events";
