--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -9,6 +9,24 @@
 }
 
 .event {
+  display: flex;
+  align-items: center;
+
+  // @include onDesktop {
+  //   flex-direction: row;
+  // }
+
+  &__img {
+    width: 870px;
+    height: 520px;
+  }
+
+  &-description {
+    display: flex;
+    flex-direction: column;
+    width: 370px;
+  }
+  
   &__photo-container {
     position: relative;
     width: 100%;
@@ -24,17 +42,19 @@
   }
 
   &__photo {
-    position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
   }
   &__schedule {
+    display: flex;
+    align-items: center;
     margin-bottom: 15px;
   }
   &__name {
     @extend %exhibinition;
+    margin-right: 26px;
   }
   
   &__date {
