--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,22 +1,122 @@
 .header {
   height: 100vh;
 
-  &__bg {
+  &__photo {
+    position: absolute;
+    right: 0;
+    height: 60vh;
     width: 100%;
-    min-height: 300px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-image: url("../images/museum.jpg");
+
+    @include onTablet {
+      width: 55%;
+      height: 100vh;
+    }
+  }
+
+  &__img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top left;
   }
   &__title {
     @extend %h1;
+    text-align: center;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+
+    &-stroke {
+      display: none;
+      @extend %h1;
+      @include onTablet {
+        position: absolute;
+        display: block;
+        margin-top: 35vh;
+        font-size: 55px;
+        color: transparent;
+        -webkit-text-stroke: 1px #000;
+        z-index: 3;
+        text-transform: uppercase;
+      }
+
+      @include onDesktop { 
+        font-size: 72px;
+      }
+
+    }
+
+    @include onTablet {
+      font-size: 55px;
+      margin-bottom: 40px;
+    }
+
+    @include onDesktop {
+      font-size: 72px;
+      margin-bottom: 80px;
+    }
+
+    &--onMobile {
+      @include onTablet {
+        display: none;
+      }
+    }
+
+    &--onDesktop {
+      display: none;
+      @include onTablet {
+        display: block;
+      }
+    }
   }
 
   &__logo {
     @extend %h3;
     font-weight: bold;
     margin-top: 9px;
+    z-index: 2;
+
+    @include onTablet {
+      font-size: 36px;
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 55vh;
+
+    @include onTablet {
+      width: 45%;
+      margin-top: 20vh;
+      justify-content: flex-end;
+    }
+  }
+
+  &__btn {
+    position: relative;
+  }
+
+  &__mark {
+    display: none;
+
+    @include onDesktop {
+      position: absolute;
+      bottom: 70px;
+      left: 0;
+      display: inline-flex;
+      align-items: center;
+      transform: rotate(270deg);
+    }
+
+    &-line {
+      display: inline-block;
+      width: 70px;
+      height: 1px;
+      background-color: $color-green;
+      margin-right: 20px;
+    }
   }
 }
 
@@ -26,6 +126,7 @@
   grid-template-columns: var(--width-icon) 1fr;
   justify-items: center;
   align-items: center;
+  height: 15vh;
   z-index: 1;
 }
 
@@ -39,5 +140,6 @@
 
   &--menu {
     background-image: url("../images/menu.svg");
+    z-index: 2;
   }
 }
