mobile first commit

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,287 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+* {
+  box-sizing: border-box;
+}
 
-body {
-  background: $c-gray;
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+.page {
+  font-family: "Montserrat", sans-serif;
+
+  &__body {
+    margin: 0;
+  }
+}
+
+.header {
+  position: relative;
+  height: 300px;
+  background-image: url(../images/NAMU.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  &__nav {
+    padding-top: 9px;
+  }
+
+  &__menu-opener {
+    position: absolute;
+    top: 33px;
+    left: 23px;
+    display: block;
+    width: 18px;
+    height: 12px;
+    background-image: url(../images/Burger_menu.svg);
+  }
+}
+
+.logo {
+  text-decoration: none;
+
+  &__txt {
+    display: block;
+    width: 55px;
+    height: 61px;
+    margin: 0 auto;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 100%;
+    text-transform: uppercase;
+    color: #0f0e08;
+  }
+}
+
+.art-museum__name {
+  padding: 20px;
+  font-weight: bold;
+  font-size: 45px;
+  line-height: 100%;
+  text-align: center;
+  color: #000;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  padding: 0 20px 70px;
+
+  &--email {
+    padding: 225px 0 0;
+  }
+
+  &__tickets {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 230px;
+    height: 50px;
+    border: 1px solid #1a5a4c;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #0f0e08;
+
+    &--email {
+      background-color: #fff;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 100%;
+      color: #687480;
+      border: none;
+      justify-content: flex-start;
+      padding-left: 30px;
+    }
+  }
+
+  &__square {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background-color: #1a5a4c;
+
+    &--email {
+      background-color: #f14a27;
+    }
+  }
+
+  &__txt {
+    color: #d7dde3;
+
+    &--email {
+      color: #000;
+    }
+  }
+}
+
+.relevant-events {
+  padding: 0 20px;
+
+  &__name {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 100%;
+    text-align: center;
+    color: #0f0e08;
+    padding-bottom: 40px;
+  }
+
+  &__block {
+    margin: 0 auto;
+  }
+
+  &__img {
+    height: 210px;
+    width: 100%;
+    object-fit: fill;
+  }
+
+  &__exb {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 0 10px;
+  }
+
+  &__left {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #687480;
+  }
+
+  &__right {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 150%;
+    color: #1a5a4c;
+  }
+
+  &__name-exb {
+    position: relative;
+    font-size: 28px;
+    font-weight: normal;
+    line-height: 100%;
+    color: #0f0e08;
+    padding-bottom: 10px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 10px;
+      height: 10px;
+      right: 5px;
+      top: 25%;
+      background-color: #f14a27;
+    }
+  }
+
+  &__content {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 150%;
+    color: #4e4e4e;
+    padding-bottom: 60px;
+  }
+}
+
+.classicism {
+
+  &__img {
+    height: 210px;
+    width: 100%;
+    object-fit: fill;
+  }
+
+  &__lecture {
+    width: 278px;
+    height: 154px;
+    margin: 0 auto;
+    position: relative;
+    bottom: 60px;
+    background-color: #fff;
+    padding: 25px 21px 34px;
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+  }
+
+  &__block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 18px;
+  }
+
+  &__left {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #687480;
+  }
+
+  &__right {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 150%;
+    color: #1a5a4c;
+  }
+
+  &__info {
+    font-size: 28px;
+    font-weight: normal;
+    line-height: 100%;
+    text-align: center;
+    color: #0f0e08;
+  }
+}
+
+.gallery {
+  padding: 0 20px;
+
+  &__name {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 100%;
+    text-align: center;
+    color: #0f0e08;
+    padding-bottom: 40px;
+  }
+
+  &__img {
+    width: 100%;
+    object-fit: contain;
+  }
+
+  &__slider {
+    display: block;
+    margin: 30px auto 100px;
+  }
+}
+
+.subscription {
+
+  &__block {
+    height: 386px;
+    background-image: url(../images/pdpska.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 }
