Hover effects were changed

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -40,11 +40,7 @@
   &__photo {
     transition: 0.5s;
 
-    @include tablet {
-      height: 400px;
-    }
-    max-height: 410px;
-    margin-right: 20px;
+    max-height: calc(100vh - 100px);
 
     @include laptop {
       width: 100%;
