--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -69,8 +69,8 @@
     transition: 0.3s;
     
     &:hover {
-      background-color: #5f5f5c;
-      border-radius: 10px;
+      text-shadow: 1px 1px 2px #1a5a4c;
+      box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     }
 
     @include laptop {
