--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -55,6 +55,12 @@
   &__contacts-link {
     color: inherit;
     text-decoration: none;
+
+    transition: 0.3s;
+    
+    &:hover {
+      text-shadow: 1px 1px 2px #1a5a4c;
+    }
   }
 
   &__nav-items {
@@ -74,6 +80,12 @@
   &__nav-link {
     text-decoration: none;
     color: inherit;
+
+    transition: 0.3s;
+    
+    &:hover {
+      text-shadow: 1px 1px 2px #1a5a4c;
+    }
   }
 
   &__line {
@@ -105,6 +117,12 @@
     background-image: url("../images/arrow-footer.svg");
     background-repeat: no-repeat;
     background-position: center;
+
+    transition: 0.3s;
+    
+    &:hover {
+     background-color: rgba(26, 90, 76, 0.5);
+    }
 
     @include biggerScreen {
       display: none;
