Navigation and hover effects for soc-media were changed

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -38,6 +38,30 @@
     }
   }
 
+  &__facebook {
+    @extend %soc-media-img;
+
+    height: 24px;
+    width: 12px;
+    background-image: url("../images/Facebook.svg");
+
+    &:hover {
+      background-image: url("../images/Facebook-hover.svg");
+    }
+  }
+
+  &__instagram {
+    @extend %soc-media-img;
+
+    height: 24px;
+    width: 24px;
+    background-image: url("../images/Instagram.svg");
+
+    &:hover {
+      background-image: url("../images/Instagram-hover.svg");
+    }
+  }
+
   &__title {
     margin-bottom: 20px;
   }
@@ -121,7 +145,7 @@
     transition: 0.3s;
     
     &:hover {
-     background-color: rgba(26, 90, 76, 0.5);
+      background-color: rgba(26, 90, 76, 0.5);
     }
 
     @include biggerScreen {
