added hover behavior

--- a/src/styles/blocks/button-arrow.scss
+++ b/src/styles/blocks/button-arrow.scss
@@ -3,19 +3,31 @@
   height: $mobile-button-height;
   width: $mobile-button-height;
 
+  border: 0;
   background-color: $accent-color;
   background-image: url(../images/button.png);
   background-repeat: no-repeat;
   background-position: center center;
-  border: 1px solid $accent-color;
 
   @include on-tablet {
     height: $desktop-button-height;
     width: $desktop-button-height;
   }
 
+  transition: background-position 400ms;
+
+  &:hover {
+    background-color: #174d42;
+    background-position: 30px;
+
+  }
+
   &--orange {
     background-color: $accent-2;
-    border-color: $accent-2;
+
+    &:hover {
+      background-color: #d84224;
+      background-position: 30px;
+    }
   }
 }
