--- a/src/styles/blocks/button-mobl-up.scss
+++ b/src/styles/blocks/button-mobl-up.scss
@@ -8,7 +8,13 @@
   background-repeat: no-repeat;
   background-position: center center;
 
+  transition: background-position 300ms;
+
   @include on-tablet {
     display: none;
+  }
+
+  &:hover {
+    background-position: center 15px;
   }
 }
