--- a/src/styles/blocks/event-card.scss
+++ b/src/styles/blocks/event-card.scss
@@ -42,6 +42,13 @@
     }
   }
 
+  &__link {
+    &:hover {
+      color: $accent-color;
+      text-decoration: underline;
+    }
+  }
+
   &__text {
     font-weight: 300;
     font-size: 16px;
