--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -31,6 +31,14 @@
     margin-right: 20px;
   }
 
+  &__media-icon {
+    transition: transform 200ms linear;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+
   &__working-hours {
     @include on-desktop {
       margin-bottom: 85px;
@@ -93,6 +101,22 @@
 
   &__links {
     margin-bottom: 20px;
+
+    transition: text-decoration 400ms;
+
+    &:hover {
+      color: $accent-2;
+      text-decoration: underline;
+    }
+  }
+
+  &__contact-link {
+    transition: text-decoration 300ms;
+
+    &:hover {
+      color: $accent-2;
+      text-decoration: underline;
+    }
   }
 
   &__design-details {
