--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -25,10 +25,16 @@
 
     margin-right: 16px;
 
+    transition: transform 300ms ease-out;
+
     @include on-tablet {
       width: 340px;
       height: 540px;
       margin-right: 20px;
+    }
+
+    &:hover {
+      transform: scale(1.02);
     }
   }
 
@@ -67,6 +73,7 @@
     @include on-desktop {
       display: none;
     }
+
   }
 
   &__button {
@@ -84,6 +91,10 @@
     &:not(:last-child) {
       margin-right: 22px;
     }
+
+    &:hover {
+      background-color: #80a19a;
+    }
   }
 
   &__desktop {
@@ -93,6 +104,16 @@
       display: block;
     }
   }
+
+  &__img-desktop {
+    transition: filter 200ms;
+
+    &:hover {
+      filter: brightness(80%);
+      cursor: pointer;
+    }
+  }
+
   &__img-desktop:nth-child(3n) {
     display: none;
     @include on-large-screen {
