--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -13,6 +13,11 @@
     margin-bottom: 200px;
   }
 
+  @media (min-width: 2560px) {
+    max-width: $large-content-maxw;
+    margin: 0 auto 200px;
+  }
+
   &__photo {
     height: 300px;
     position: absolute;
@@ -42,6 +47,10 @@
     
     @include on-large-screen {
       width: 1245px;
+    }
+
+    @media (min-width: 2560px) {
+      width: 1100px;
     }
   }
 
@@ -87,6 +96,15 @@
       color: transparent;
     }
 
+  }
+
+  &__buttons {
+    max-width: 280px;
+    margin: 0 auto;
+
+    @include on-tablet {
+      margin: initial;
+    }
   }
 
   &__container {
