--- a/src/styles/blocks/lection-card.scss
+++ b/src/styles/blocks/lection-card.scss
@@ -35,6 +35,13 @@
     }
   }
 
+  &__link {
+    &:hover {
+      color: $accent-color;
+      text-decoration: underline;
+    }
+  }
+
   &__lection-info {
     box-sizing: border-box;
     z-index: 1;
