--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -7,7 +7,14 @@
   line-height: 100%;
   color: #0f0e08;
 
+  transition: transform 250ms linear;
+
   @include on-tablet {
     font-size: 36px;
   }
+
+  &:hover {
+    transform: scale(1.03);
+  }
+
 }
