--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -12,16 +12,14 @@
 
     background-size: contain;
     background-repeat: no-repeat;
+
+    transition: transform 300ms;
     &--open {
       background-image: url("../images/icon.png");
     }
 
-    &--close {
-      background-image: url("../images/close.png");
+    &:hover {
+      transform: scale(1.1);
     }
-  }
-
-  &--close {
-    display: none;
   }
 }
