--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -15,6 +15,8 @@
     text-align: center;
     color: $text-color;
 
+    transition: color 200ms;
+
     @include on-tablet {
       margin-bottom: 50px;
       text-align: left;
@@ -23,6 +25,11 @@
 
     @include on-desktop {
       margin-bottom: 60px;
+    }
+
+    &:hover {
+      color: #132b26;
+      cursor: pointer;
     }
 
     &--subscribe {
