--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,27 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onDesktop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin iPad {
+  @media (min-width: 600px) {
+    @content;
+  }
+}
+
+@mixin hd {
+  @media (min-width: 1304px) {
+    @content;
+  }
+}
+
+@mixin fullHD {
+  @media (min-width: 1800px) {
+    @content;
+  }
+}
