--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -4,3 +4,14 @@
   font-weight: normal;
   font-style: normal;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.logo {
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+}
