--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,19 +1,18 @@
 .header {
-  height: 320px;
 
   display: flex;
 
   &__photo {
     position: absolute;
-    top: 0;
     right: 0;
-    left: 0;
+    // left: 40%;
     z-index: -1;
-
-    &--image {
-      height: 300px;
-      width: 100%;
-    }
+    background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 300px;
+    width: 320px;
   }
 
   &__title {
@@ -32,6 +31,18 @@
 
   @include iPad {
     height: 384px;
+
+    &__photo {
+      position: absolute;
+      right: 0;
+      z-index: -1;
+      background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 384px;
+      width: 505px;
+    }
 
     &__title {
       font-weight: bold;
@@ -54,14 +65,21 @@
     height: 655px;
 
     &__photo {
-      transform: translate(-305px, -225px);
-      left: auto;
-      right: auto;
-
-      &--image {
-        height: 655px;
-      }
+      position: absolute;
+      right: 0;
+      z-index: -1;
+      background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 655px;
+      width: 884px;
     }
+
+    &__title {
+      margin-left: 213px;
+    }
+
   }
 
   @include hd {
