--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,5 @@
 @import "./blocks/menu.scss";
 @import "./blocks/grid.scss";
 @import "./blocks/button.scss";
+@import "./blocks/section.scss";
+@import "./blocks/place.scss";
