mobile version finished

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -53,6 +53,16 @@ p {
     line-height: 100%;
     text-transform: uppercase;
     color: #0f0e08;
+
+    &--footer {
+      margin: 0;
+      height: 72px;
+      width: 63px;
+      font-weight: bold;
+      font-size: 36px;
+      line-height: 100%;
+      color: #0f0e08;
+    }
   }
 }
 
@@ -71,7 +81,8 @@ p {
   padding: 0 20px 70px;
 
   &--email {
-    padding: 225px 0 0;
+    padding: 0;
+    width: 100%;
   }
 
   &__tickets {
@@ -279,9 +290,117 @@ p {
 
   &__block {
     height: 386px;
+    padding: 55px 20px 110px;
     background-image: url(../images/pdpska.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    margin-bottom: 50px;
+  }
+
+  &__name {
+    text-align: center;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 100%;
+    color: #fff;
+    margin-bottom: 30px;
+  }
+
+  &__content {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 150%;
+    text-align: center;
+    color: #fff;
+    margin-bottom: 50px;
+  }
+}
+
+.footer {
+  padding: 0 20px;
+
+  &__logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+  }
+
+  &__soc-links {
+    display: flex;
+    gap: 26px;
+  }
+
+  &__contacts {
+    display: grid;
+    height: fit-content;
+    grid-template-columns: repeat(2, 50%);
+    grid-gap: 20px;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 150%;
+    color: #0f0e08;
+  }
+
+  &__bold {
+    font-weight: 600;
+  }
+
+  &__container {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  &__button {
+    border: none;
+    background-color: #fff;
+    padding: 0;
+    margin-bottom: 20px;
+  }
+
+  &__line {
+    &::after {
+      content: "";
+      display: block;
+      height: 1px;
+      width: 100%;
+      background-color: rgba(26, 90, 76, 0.5);
+      margin-bottom: 40px;
+    }
+  }
+
+  &__nav-items {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    &--right {
+      margin-left: 50px;
+    }
+  }
+
+  &__nav-item {
+    margin-bottom: 20px;
+  }
+
+  &__nav-link {
+    text-decoration: none;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 100%;
+    color: #0f0e08;
+
+    transition: 0.3s;
+    
+    &:hover {
+      text-shadow: 1px 1px 2px #1a5a4c;
+    }
   }
 }
