--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$container-padding: 24px;
+$top-actions-height-mobile: 60px;
+$header-padding-top: 8px;
+$header-row-gap: 48px;
+$green-secondary: #1a5a4c;
+$font-main-color: #0f0e08;
+$font-light-grey: #687480;
+$font-dark-grey: #4e4e4e;
+$oh-so-orange: #f14a27;
+$nav-border: rgba(26, 90, 76, 0.5);
