--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,22 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./fonts";
+@import "./reset";
+@import "./utils/vars";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/button.scss";
+@import "./blocks/buttons.scss";
+@import "./blocks/container.scss";
+@import "./blocks/event.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/header.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/link.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/page.scss";
+@import "./blocks/side-pin.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/t-table.scss";
+@import "./blocks/top-actions.scss";
