--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -11,6 +11,32 @@
 
   &__header {
     position: relative;
+    margin-bottom: 70px;
+
+    @include onDesktop {
+      margin-bottom: 90px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
+  }
+
+  &__current-events {
+    margin-bottom: 60px;
+
+    @include onTablet {
+      margin-bottom: 90px;
+    }
+
+    @include onTablet {
+      margin-bottom: 100px;
+    }
+
+    &__lecture {
+      position: relative;
+      margin-bottom: 100px;
+    }
   }
 
   &__section {
@@ -20,6 +46,7 @@
       margin-bottom: 40px;
 
       @include onTablet {
+        text-align: left;
         margin-bottom: 50px;
       }
 
