--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,14 +5,20 @@
   }
 }
 
+@mixin onLargeDes {
+  @media (min-width: 1920px) {
+    @content;
+  }
+}
+
 @mixin onDesktop {
-  @media (min-width: 1024px) {
+  @media (min-width: 1280px) {
     @content;
   }
 }
 
 @mixin onTablet {
-  @media (min-width: 700px) {
+  @media (min-width: 768px) {
     @content;
   }
 }
