--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,6 +1,5 @@
 .container {
   padding: 0 20px;
-  max-width: 1570px;
 
   @include onTablet {
     padding: 0 30px;
@@ -8,5 +7,11 @@
 
   @include onDesktop {
     padding: 0 40px;
+    max-width: 1170px;
+  }
+
+  @include onLargeDes {
+    padding: 0 40px;
+    max-width: 1570px;
   }
 }
