--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,23 +3,39 @@
 
   &__photo {
     position: absolute;
+    top: 0;
+    left: 0;
     right: 0;
-    height: 60vh;
     width: 100%;
+    height: 60vh;
 
     @include onTablet {
-      width: 55%;
+      position: absolute;
+      left: auto;
       height: 100vh;
+      width: 55%;
+    }
+
+    @include onDesktop {
+      left: auto;
+      height: 100vh;
+      width: 53%;
     }
   }
 
   &__img {
     position: absolute;
-    width: 100%;
     height: 100%;
+    width: 100%;
     object-fit: cover;
-    object-position: top left;
+    object-position: center;
+    z-index: 0;
+
+    @include onTablet {
+      object-position: top left;
+    }
   }
+
   &__title {
     @extend %h1;
     text-align: center;
@@ -27,31 +43,29 @@
     text-transform: uppercase;
 
     &-stroke {
-      display: none;
-      @extend %h1;
       @include onTablet {
         position: absolute;
+        top: 35vh;
         display: block;
-        margin-top: 35vh;
-        font-size: 55px;
+        -webkit-text-stroke: 1.5px #000;
         color: transparent;
-        -webkit-text-stroke: 1px #000;
-        z-index: 3;
         text-transform: uppercase;
+        font-size: 55px;
       }
-
+      
       @include onDesktop {
         font-size: 72px;
       }
-
     }
 
     @include onTablet {
+      text-align: left;
       font-size: 55px;
       margin-bottom: 40px;
     }
 
     @include onDesktop {
+      text-align: left;
       font-size: 72px;
       margin-bottom: 80px;
     }
@@ -85,12 +99,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 55vh;
+    margin-top: 50vh;
 
     @include onTablet {
-      width: 45%;
-      margin-top: 20vh;
       justify-content: flex-end;
+      margin-top: 20vh;
+      width: 45%;
+    }
+
+    @include onDesktop {
+      width: 46%;
     }
   }
 
@@ -104,10 +122,14 @@
     @include onDesktop {
       position: absolute;
       bottom: 70px;
-      left: 0;
-      display: inline-flex;
+      left: auto;
+      display: flex;
       align-items: center;
       transform: rotate(270deg);
+    }
+
+    &-text {
+      font-weight: bold;
     }
 
     &-line {
