add gallery and subscription

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -34,6 +34,15 @@
     cursor: pointer;
     overflow: hidden;
     
+    &--orange {
+      border: none;
+      background-color: #f14a27;
+      background-image: url("../images/arrow-black.svg");
+      transition: background-color 0.3s;
+      &:hover {
+        background-color: darken(#f14a27, 15%);
+      }
+    }
 
     @include onTablet {
       width: 70px;
