--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -32,11 +32,27 @@
     @include onTablet {
       margin-bottom: 100px;
     }
+  }
 
-    &__lecture {
-      position: relative;
-      margin-bottom: 100px;
+  &__lecture {
+    position: relative;
+    margin-bottom: 200px;
+  }
+
+  &__gallery {
+    margin-bottom: 100px;
+
+    @include onTablet {
+      margin-bottom: 129px;
     }
+
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
+  }
+
+  &__subscription {
+    margin-bottom: 50px;
   }
 
   &__section {
