--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,6 @@
 @import "./blocks/button";
 @import "./blocks/events";
 @import "./blocks/lecture";
+@import "./blocks/gallery";
+@import "./blocks/subscription";
+@import "./blocks/footer";
