--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,3 +3,7 @@ $color-title-section: #0f0e08;
 $header-text-color: #000;
 $text-color: #4e4e4e;
 $exhibinition-name:#687480;
+$galleryWidthTab: 340px;
+$galleryWidthMob: 280px;
+$galleryGapTab: 20px;
+$galleryGapMob: 16px;
